generated_simple/chtl/grammars/chtl/CHTL_simpleParser.cpp

// Generated from grammars/chtl/CHTL_simple.g4 by ANTLR 4.13.1


#include "CHTL_simpleListener.h"
#include "CHTL_simpleVisitor.h"

#include "CHTL_simpleParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CHTL_simpleParserStaticData final {
  CHTL_simpleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CHTL_simpleParserStaticData(const CHTL_simpleParserStaticData&) = delete;
  CHTL_simpleParserStaticData(CHTL_simpleParserStaticData&&) = delete;
  CHTL_simpleParserStaticData& operator=(const CHTL_simpleParserStaticData&) = delete;
  CHTL_simpleParserStaticData& operator=(CHTL_simpleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag chtl_simpleParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CHTL_simpleParserStaticData *chtl_simpleParserStaticData = nullptr;

void chtl_simpleParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (chtl_simpleParserStaticData != nullptr) {
    return;
  }
#else
  assert(chtl_simpleParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CHTL_simpleParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "elementStatement", "attributes", "attribute", 
      "elementContent", "textBlock", "styleBlock", "scriptBlock", "templateStatement", 
      "customStatement", "originStatement"
    },
    std::vector<std::string>{
      "", "", "", "'[Template]'", "'[Custom]'", "'[Origin]'", "'text'", 
      "'style'", "'script'", "'{'", "'}'", "';'", "':'", "'='", "'.'"
    },
    std::vector<std::string>{
      "", "WS", "COMMENT", "TEMPLATE", "CUSTOM", "ORIGIN", "TEXT", "STYLE", 
      "SCRIPT", "LBRACE", "RBRACE", "SEMICOLON", "COLON", "EQUALS", "DOT", 
      "IDENTIFIER", "NUMBER", "STRING"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  chtl_simpleParserStaticData = staticData.release();
}

}

CHTL_simpleParser::CHTL_simpleParser(TokenStream *input) : CHTL_simpleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CHTL_simpleParser::CHTL_simpleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CHTL_simpleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *chtl_simpleParserStaticData->atn, chtl_simpleParserStaticData->decisionToDFA, chtl_simpleParserStaticData->sharedContextCache, options);
}

CHTL_simpleParser::~CHTL_simpleParser() {
  delete _interpreter;
}

const atn::ATN& CHTL_simpleParser::getATN() const {
  return *chtl_simpleParserStaticData->atn;
}

std::string CHTL_simpleParser::getGrammarFileName() const {
  return "CHTL_simple.g4";
}

const std::vector<std::string>& CHTL_simpleParser::getRuleNames() const {
  return chtl_simpleParserStaticData->ruleNames;
}

const dfa::Vocabulary& CHTL_simpleParser::getVocabulary() const {
  return chtl_simpleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CHTL_simpleParser::getSerializedATN() const {
  return chtl_simpleParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

CHTL_simpleParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CHTL_simpleParser::StatementContext *> CHTL_simpleParser::ProgramContext::statement() {
  return getRuleContexts<CHTL_simpleParser::StatementContext>();
}

CHTL_simpleParser::StatementContext* CHTL_simpleParser::ProgramContext::statement(size_t i) {
  return getRuleContext<CHTL_simpleParser::StatementContext>(i);
}


size_t CHTL_simpleParser::ProgramContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleProgram;
}

void CHTL_simpleParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void CHTL_simpleParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any CHTL_simpleParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::ProgramContext* CHTL_simpleParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CHTL_simpleParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 32824) != 0)) {
      setState(24);
      statement();
      setState(29);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CHTL_simpleParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTL_simpleParser::ElementStatementContext* CHTL_simpleParser::StatementContext::elementStatement() {
  return getRuleContext<CHTL_simpleParser::ElementStatementContext>(0);
}

CHTL_simpleParser::TemplateStatementContext* CHTL_simpleParser::StatementContext::templateStatement() {
  return getRuleContext<CHTL_simpleParser::TemplateStatementContext>(0);
}

CHTL_simpleParser::CustomStatementContext* CHTL_simpleParser::StatementContext::customStatement() {
  return getRuleContext<CHTL_simpleParser::CustomStatementContext>(0);
}

CHTL_simpleParser::OriginStatementContext* CHTL_simpleParser::StatementContext::originStatement() {
  return getRuleContext<CHTL_simpleParser::OriginStatementContext>(0);
}


size_t CHTL_simpleParser::StatementContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleStatement;
}

void CHTL_simpleParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void CHTL_simpleParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any CHTL_simpleParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::StatementContext* CHTL_simpleParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CHTL_simpleParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(34);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CHTL_simpleParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(30);
        elementStatement();
        break;
      }

      case CHTL_simpleParser::TEMPLATE: {
        enterOuterAlt(_localctx, 2);
        setState(31);
        templateStatement();
        break;
      }

      case CHTL_simpleParser::CUSTOM: {
        enterOuterAlt(_localctx, 3);
        setState(32);
        customStatement();
        break;
      }

      case CHTL_simpleParser::ORIGIN: {
        enterOuterAlt(_localctx, 4);
        setState(33);
        originStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementStatementContext ------------------------------------------------------------------

CHTL_simpleParser::ElementStatementContext::ElementStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTL_simpleParser::ElementStatementContext::IDENTIFIER() {
  return getToken(CHTL_simpleParser::IDENTIFIER, 0);
}

CHTL_simpleParser::AttributesContext* CHTL_simpleParser::ElementStatementContext::attributes() {
  return getRuleContext<CHTL_simpleParser::AttributesContext>(0);
}

tree::TerminalNode* CHTL_simpleParser::ElementStatementContext::LBRACE() {
  return getToken(CHTL_simpleParser::LBRACE, 0);
}

CHTL_simpleParser::ElementContentContext* CHTL_simpleParser::ElementStatementContext::elementContent() {
  return getRuleContext<CHTL_simpleParser::ElementContentContext>(0);
}

tree::TerminalNode* CHTL_simpleParser::ElementStatementContext::RBRACE() {
  return getToken(CHTL_simpleParser::RBRACE, 0);
}


size_t CHTL_simpleParser::ElementStatementContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleElementStatement;
}

void CHTL_simpleParser::ElementStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElementStatement(this);
}

void CHTL_simpleParser::ElementStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElementStatement(this);
}


std::any CHTL_simpleParser::ElementStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitElementStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::ElementStatementContext* CHTL_simpleParser::elementStatement() {
  ElementStatementContext *_localctx = _tracker.createInstance<ElementStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, CHTL_simpleParser::RuleElementStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(CHTL_simpleParser::IDENTIFIER);
    setState(38);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(37);
      attributes();
      break;
    }

    default:
      break;
    }
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CHTL_simpleParser::LBRACE) {
      setState(40);
      match(CHTL_simpleParser::LBRACE);
      setState(41);
      elementContent();
      setState(42);
      match(CHTL_simpleParser::RBRACE);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributesContext ------------------------------------------------------------------

CHTL_simpleParser::AttributesContext::AttributesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CHTL_simpleParser::AttributeContext *> CHTL_simpleParser::AttributesContext::attribute() {
  return getRuleContexts<CHTL_simpleParser::AttributeContext>();
}

CHTL_simpleParser::AttributeContext* CHTL_simpleParser::AttributesContext::attribute(size_t i) {
  return getRuleContext<CHTL_simpleParser::AttributeContext>(i);
}


size_t CHTL_simpleParser::AttributesContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleAttributes;
}

void CHTL_simpleParser::AttributesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttributes(this);
}

void CHTL_simpleParser::AttributesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttributes(this);
}


std::any CHTL_simpleParser::AttributesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitAttributes(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::AttributesContext* CHTL_simpleParser::attributes() {
  AttributesContext *_localctx = _tracker.createInstance<AttributesContext>(_ctx, getState());
  enterRule(_localctx, 6, CHTL_simpleParser::RuleAttributes);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(46);
        attribute(); 
      }
      setState(51);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

CHTL_simpleParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CHTL_simpleParser::AttributeContext::IDENTIFIER() {
  return getTokens(CHTL_simpleParser::IDENTIFIER);
}

tree::TerminalNode* CHTL_simpleParser::AttributeContext::IDENTIFIER(size_t i) {
  return getToken(CHTL_simpleParser::IDENTIFIER, i);
}

tree::TerminalNode* CHTL_simpleParser::AttributeContext::SEMICOLON() {
  return getToken(CHTL_simpleParser::SEMICOLON, 0);
}

tree::TerminalNode* CHTL_simpleParser::AttributeContext::COLON() {
  return getToken(CHTL_simpleParser::COLON, 0);
}

tree::TerminalNode* CHTL_simpleParser::AttributeContext::EQUALS() {
  return getToken(CHTL_simpleParser::EQUALS, 0);
}

tree::TerminalNode* CHTL_simpleParser::AttributeContext::STRING() {
  return getToken(CHTL_simpleParser::STRING, 0);
}


size_t CHTL_simpleParser::AttributeContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleAttribute;
}

void CHTL_simpleParser::AttributeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute(this);
}

void CHTL_simpleParser::AttributeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute(this);
}


std::any CHTL_simpleParser::AttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitAttribute(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::AttributeContext* CHTL_simpleParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 8, CHTL_simpleParser::RuleAttribute);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(CHTL_simpleParser::IDENTIFIER);
    setState(53);
    _la = _input->LA(1);
    if (!(_la == CHTL_simpleParser::COLON

    || _la == CHTL_simpleParser::EQUALS)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(54);
    _la = _input->LA(1);
    if (!(_la == CHTL_simpleParser::IDENTIFIER

    || _la == CHTL_simpleParser::STRING)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(55);
    match(CHTL_simpleParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContentContext ------------------------------------------------------------------

CHTL_simpleParser::ElementContentContext::ElementContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CHTL_simpleParser::ElementStatementContext *> CHTL_simpleParser::ElementContentContext::elementStatement() {
  return getRuleContexts<CHTL_simpleParser::ElementStatementContext>();
}

CHTL_simpleParser::ElementStatementContext* CHTL_simpleParser::ElementContentContext::elementStatement(size_t i) {
  return getRuleContext<CHTL_simpleParser::ElementStatementContext>(i);
}

std::vector<CHTL_simpleParser::TextBlockContext *> CHTL_simpleParser::ElementContentContext::textBlock() {
  return getRuleContexts<CHTL_simpleParser::TextBlockContext>();
}

CHTL_simpleParser::TextBlockContext* CHTL_simpleParser::ElementContentContext::textBlock(size_t i) {
  return getRuleContext<CHTL_simpleParser::TextBlockContext>(i);
}

std::vector<CHTL_simpleParser::StyleBlockContext *> CHTL_simpleParser::ElementContentContext::styleBlock() {
  return getRuleContexts<CHTL_simpleParser::StyleBlockContext>();
}

CHTL_simpleParser::StyleBlockContext* CHTL_simpleParser::ElementContentContext::styleBlock(size_t i) {
  return getRuleContext<CHTL_simpleParser::StyleBlockContext>(i);
}

std::vector<CHTL_simpleParser::ScriptBlockContext *> CHTL_simpleParser::ElementContentContext::scriptBlock() {
  return getRuleContexts<CHTL_simpleParser::ScriptBlockContext>();
}

CHTL_simpleParser::ScriptBlockContext* CHTL_simpleParser::ElementContentContext::scriptBlock(size_t i) {
  return getRuleContext<CHTL_simpleParser::ScriptBlockContext>(i);
}


size_t CHTL_simpleParser::ElementContentContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleElementContent;
}

void CHTL_simpleParser::ElementContentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElementContent(this);
}

void CHTL_simpleParser::ElementContentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElementContent(this);
}


std::any CHTL_simpleParser::ElementContentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitElementContent(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::ElementContentContext* CHTL_simpleParser::elementContent() {
  ElementContentContext *_localctx = _tracker.createInstance<ElementContentContext>(_ctx, getState());
  enterRule(_localctx, 10, CHTL_simpleParser::RuleElementContent);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 33216) != 0)) {
      setState(61);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CHTL_simpleParser::IDENTIFIER: {
          setState(57);
          elementStatement();
          break;
        }

        case CHTL_simpleParser::TEXT: {
          setState(58);
          textBlock();
          break;
        }

        case CHTL_simpleParser::STYLE: {
          setState(59);
          styleBlock();
          break;
        }

        case CHTL_simpleParser::SCRIPT: {
          setState(60);
          scriptBlock();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TextBlockContext ------------------------------------------------------------------

CHTL_simpleParser::TextBlockContext::TextBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTL_simpleParser::TextBlockContext::TEXT() {
  return getToken(CHTL_simpleParser::TEXT, 0);
}

tree::TerminalNode* CHTL_simpleParser::TextBlockContext::LBRACE() {
  return getToken(CHTL_simpleParser::LBRACE, 0);
}

tree::TerminalNode* CHTL_simpleParser::TextBlockContext::RBRACE() {
  return getToken(CHTL_simpleParser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> CHTL_simpleParser::TextBlockContext::STRING() {
  return getTokens(CHTL_simpleParser::STRING);
}

tree::TerminalNode* CHTL_simpleParser::TextBlockContext::STRING(size_t i) {
  return getToken(CHTL_simpleParser::STRING, i);
}

std::vector<tree::TerminalNode *> CHTL_simpleParser::TextBlockContext::IDENTIFIER() {
  return getTokens(CHTL_simpleParser::IDENTIFIER);
}

tree::TerminalNode* CHTL_simpleParser::TextBlockContext::IDENTIFIER(size_t i) {
  return getToken(CHTL_simpleParser::IDENTIFIER, i);
}


size_t CHTL_simpleParser::TextBlockContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleTextBlock;
}

void CHTL_simpleParser::TextBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTextBlock(this);
}

void CHTL_simpleParser::TextBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTextBlock(this);
}


std::any CHTL_simpleParser::TextBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitTextBlock(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::TextBlockContext* CHTL_simpleParser::textBlock() {
  TextBlockContext *_localctx = _tracker.createInstance<TextBlockContext>(_ctx, getState());
  enterRule(_localctx, 12, CHTL_simpleParser::RuleTextBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(CHTL_simpleParser::TEXT);
    setState(67);
    match(CHTL_simpleParser::LBRACE);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CHTL_simpleParser::IDENTIFIER

    || _la == CHTL_simpleParser::STRING) {
      setState(68);
      _la = _input->LA(1);
      if (!(_la == CHTL_simpleParser::IDENTIFIER

      || _la == CHTL_simpleParser::STRING)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(CHTL_simpleParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StyleBlockContext ------------------------------------------------------------------

CHTL_simpleParser::StyleBlockContext::StyleBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTL_simpleParser::StyleBlockContext::STYLE() {
  return getToken(CHTL_simpleParser::STYLE, 0);
}

tree::TerminalNode* CHTL_simpleParser::StyleBlockContext::LBRACE() {
  return getToken(CHTL_simpleParser::LBRACE, 0);
}

tree::TerminalNode* CHTL_simpleParser::StyleBlockContext::RBRACE() {
  return getToken(CHTL_simpleParser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> CHTL_simpleParser::StyleBlockContext::STRING() {
  return getTokens(CHTL_simpleParser::STRING);
}

tree::TerminalNode* CHTL_simpleParser::StyleBlockContext::STRING(size_t i) {
  return getToken(CHTL_simpleParser::STRING, i);
}

std::vector<tree::TerminalNode *> CHTL_simpleParser::StyleBlockContext::IDENTIFIER() {
  return getTokens(CHTL_simpleParser::IDENTIFIER);
}

tree::TerminalNode* CHTL_simpleParser::StyleBlockContext::IDENTIFIER(size_t i) {
  return getToken(CHTL_simpleParser::IDENTIFIER, i);
}


size_t CHTL_simpleParser::StyleBlockContext::getRuleIndex() const {
  return CHTL_simpleParser::RuleStyleBlock;
}

void CHTL_simpleParser::StyleBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStyleBlock(this);
}

void CHTL_simpleParser::StyleBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTL_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStyleBlock(this);
}


std::any CHTL_simpleParser::StyleBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTL_simpleVisitor*>(visitor))
    return parserVisitor->visitStyleBlock(this);
  else
    return visitor->visitChildren(this);
}

CHTL_simpleParser::StyleBlockContext* CHTL_simpleParser::styleBlock() {
  StyleBlockContext *_localctx = _tracker.createInstance<StyleBlockContext>(_ctx, getState());
  enterRule(_localctx, 14, CHTL_simpleParser::RuleStyleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(CHTL_simpleParser::STYLE);
    setState(77);
    match(CHTL_simpleParser::LBRACE);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CHTL_simpleParser::IDENTIFIER

    || _la == CHTL_simpleParser::STRING) {
      setState(78);
      _la = _input->LA(1);
      if (!(_la == CHTL_simpleParser::IDENTIFIER

      || _la == CHTL_simpleParser::STRING)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(CHTL_simpleParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScriptBlockContext ------------------------------------------------------------------

CHTL_simpleParser::ScriptBlockContext::ScriptBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTL_simpleParser::ScriptBlockContext::SCRIPT() {
  return getToken(CHTL_simpleParser::SCRIPT, 0);
}

tree::TerminalNode* CHTL_simpleParser::ScriptBlockContext::LBRACE() {
  return getToken(CHTL_simpleParser::LBRACE, 0);
}

tree::TerminalNode* CHTL_simpleParser::ScriptBlockContext::RBRACE() {
  return getToken(CHTL_simpleParser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> CHTL_simpleParser::ScriptBlockContext::STRING() {
  return getTokens(CHTL_simpleParser::STRING);
}
